@@ -13,8 +13,8 @@ class PDF::Native:ver<0.0.2> {
 
     constant PDF_BOOL   is export(:types) = int32;
     constant PDF_INT    is export(:types) = int32;
+    constant PDF_INT64  is export(:types) = int64;
     constant PDF_UINT   is export(:types) = uint32;
-    constant PDF_UINT64 is export(:types) = uint64;
     constant PDF_REAL   is export(:types) = num64;
     constant PDF_STRING is export(:types) = str;
     constant PDF_CODE_POINTS is export(:types) = Blob[uint32];
