@@ -6,4 +6,3 @@ filt_predict_tiff.o: filt_predict_tiff.c ../pdf.h \
  ../pdf/filt_predict_tiff.h
 read.o: read.c ../pdf.h ../pdf/types.h ../pdf/read.h
 write.o: write.c ../pdf.h ../pdf/types.h ../pdf/write.h
-version.o: version.c ../pdf.h ../pdf/version.h
