@@ -3,6 +3,7 @@
 
 typedef double    PDF_REAL;
 typedef int32_t   PDF_INT;
+typedef int64_t   PDF_INT64;
 typedef uint32_t  PDF_UINT;
 typedef int32_t   PDF_BOOL;
 typedef char*     PDF_STRING;
